fix: adjust image size for profil-img on smallest screens for better responsiveness

--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -295,11 +295,10 @@
   }
 }
 
-/* Smallest screens adjustment */
 @media (max-width: 320px) {
   .profil-img img {
-    width: 240px;
-    height: 240px;
+    width: 100%;
+    height: 280px;
     border-radius: 16px;
   }
   
